<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/spacingLarge"
    tools:context=".activity.InsertActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/spacingZero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingMedium"
        android:layout_marginEnd="@dimen/spacingMedium"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/spacingZero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingMedium"
        android:layout_marginTop="@dimen/spacingSmall"
        android:layout_marginEnd="@dimen/spacingMedium"
        android:hint="@string/price"
        app:helperText="Price in USD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/spacingZero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingMedium"
        android:layout_marginTop="@dimen/spacingSmall"
        android:layout_marginEnd="@dimen/spacingMedium"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingSmall"
        android:layout_marginTop="@dimen/spacingMedium"
        android:layout_marginEnd="@dimen/spacingSmall"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_add_a_photo_black_24dp"
        android:drawablePadding="@dimen/spacingSmall"
        android:text="@string/upload_photo"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription"/>

    <ImageView
        android:id="@+id/image_travel_deal"
        android:layout_width="@dimen/spacingZero"
        android:layout_height="@dimen/spacingZero"
        android:layout_marginTop="@dimen/spacingLarge"
        android:contentDescription="@string/travel_deal_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_upload"
        android:src="@drawable/travel_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>